--------------

- SNMPv3 native Notification Originator examples extended to cover
  many use cases.
- The missing functionality of NOTIFICATION-TYPE objects being looked up
  at local Management Instrumentation and attached to TRAP/IMFORM message
  by Notification Originator is now fully implemented.
- Examples on SNMPv3 TRAP Originator now includes fixing
  local snmpEngineId value.
- The contextName parameter of context.SnmpContext() made optional.
- I/O sockets buffer sizes made configurable, minimum default is now 
  forced to be no less than 2**17 (to fit two huge datagrams).
- Fix to outgoing queue processing order at socket transport. Now
  it's a FIFO discipline rather than LIFO.
- Fix to NotificationOriginator's additionalVarBinds parameter - it is
  not mandatory anymore with the oneliner API. Also additionalVarBinds
  defaulted value changed from None to () meaning no var-binds.
- Attempt to convert Windows style EOL into UNIX ones in MIB source
  modules appeared to be unnecessary and even destructive to modules
  data in some cases. So the convertion code removed altogether.
- Example configuration for Net-SNMP's snmptrapd added.
- Unnecessary *MibSource explicit initialization calls removed at MibBuilder.
- Cast additionalVarBinds into ObjectIdentifier type at
  NotificationOriginator.sendNotification()
- Fix to isAccessAllowed() error handling at NotificationOriginator. System
  used to crash on access denied condition.
- Fix to NotificationOriginator to make it use system uptime and trap OID
  values from SNMP engine's instrumentation rather then from SNMP context.

Revision 4.2.3
--------------

- SECURITY FIX: USM subsystem did not verify securityLevel of a request
  to an authoritative SNMP engineinbound against auth/priv protocols
  configured for the user in question. That allowed unauthenticated/unciphered
  access to pysnmp-based Agent even if USM user is configured to provide one.